# sycltrain

./: .gitignore  .travis.yml  README.md
.github/workflows/: build.yml
9_sycl_of_hell/: 0_tiny_sycl_info.cpp  1_my_first_kernel.cpp  2_parallel_for.cpp  3_nd_range.cpp  4_buffer.cpp  4_memory.cpp  5_buffer_update_host.cpp  5_copy_device_to_host.cpp  6_error_handling.cpp  6_in_order.cpp  7_allocator_usm.cpp  7_buffer_usm.cpp  7_out_of_order.cpp  8_event.cpp  8_reduction.cpp  8_simple_dag.cpp  9_sycl_of_hell  CMakeLists.txt  Makefile  README.md  argparse.hpp  configure-cmake
9_sycl_of_hell/.github/workflows/: build.yml
9_sycl_of_hell/advanced_inferno/: 0_parallel_for_functor.cpp  10_host_task.cpp  10_matrix_mul_mkl.cpp  10_opencl_kernel.cpp  1_dag_queue_functor.cpp  2_opencl_kernel.cpp  2_parallel_for_functor.cpp  3_buffer_2d.cpp  4_buffer_atomic.cpp  5_buffer_usm.cpp  7_allocator_usm.cpp  7_buffer_usm.cpp  7_force_allocate.cpp  8_simple_dag.cpp  9_matrix_mul_mkl.cpp  CMakeLists.txt  Makefile  hierarchical.cpp
9_sycl_of_hell/bleeding_edge/: 2_parallel_for.cpp  CMakeLists.txt  Makefile  esimd_test_utils.hpp  reduction.cpp  vadd_usm.cpp
9_sycl_of_hell/cmake/: FindSYCLTargets.cmake
advanced_inferno/: 0_parallel_for_functor.cpp  0_vector_allocator_usm.cpp  10_host_task.cpp  1_slm.cpp  2_gemm_onemath.cpp  3_mdspan.cpp  5_dag_queue_functor.cpp  6_buffer_slm.cpp  7_allocator_usm.cpp  7_concurent.cpp  7_concurrent.cpp  8_mdspan.cpp  8_submit_lazy_greedy.cpp  Makefile
include/: tprint.hpp
include/mdspan/experimental/__p0009_bits/: macros.hpp
include/mdspan/experimental/__p2642_bits/: layout_padded.hpp
presentation/2020_07_30_ATPESC/: env.cooley.rc  env.devcloud.rc  fetch_a_node.cooley.sh  fetch_a_node.devcloud.sh
presentation/2020_07_30_ATPESC/exercise/.solution/: 1_my_first_kernel_on_cpu.cpp  1_my_first_two_kernels.cpp  4_buffer_dependency.cpp  4_buffer_dependency_one_vector.cpp  argparse.hpp
presentation/2020_10_21_COE/: 9_sycl_of_hell  fetch_a_node.iris.sh  fetch_a_node.yarrow.sh
presentation/2020_10_21_COE/exercise/: README.md
presentation/2020_10_21_COE/exercise/.solution/: 0_tiny_sycl_info_max_clock_frequency.cpp  1_my_first_kernel_on_host.cpp  1_my_first_two_kernels_same_name.cpp  2_parallel_for_with_function.cpp  2d_parallel_for.cpp  4_buffer_memcopy.cpp  8_event_sync.cpp
presentation/2021_08_05_ATPESC/: README.md
presentation/2021_08_05_ATPESC/example/: alloc_two_queue.cpp  alloc_two_queue_fixed.cpp  context.cpp  first_kernel.cpp  queue_explicit.cpp  queue_explicit_alloc.cpp  queue_implicit.cpp  queue_implicit_alloc.cpp
presentation/2022_05-26_ALCFCPW/: README.md
presentation/2023_08_03_ATPESC/: 9_sycl_of_hell
presentation/2023_08_03_ATPESC/cublas_to_onemkl/: cublas.cu  sycl_onemkl.cpp
presentation/2023_08_03_ATPESC/cublas_to_onemkl/sycl_port/: MainSourceFiles.yaml  cublas.dp.cpp
presentation/2023_08_03_ATPESC/thrust_to_onedpl/: thrust_transform_reduce.cu
presentation/2023_08_03_ATPESC/thrust_to_onedpl/sycl_port/: MainSourceFiles.yaml  thrust_transform_reduce.dp.cpp
