cmake_minimum_required(VERSION 3.20...${CMAKE_VERSION})
project(syclOfHell LANGUAGES CXX)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
find_package(SYCL REQUIRED)

function(add_exe EXE_NAME)
  add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
endfunction(add_exe)
add_exe(0_tiny_sycl_info)
add_exe(1_my_first_kernel)
add_exe(2_parallel_for)
add_exe(3_nd_range)
add_exe(4_buffer)
add_exe(5_copy_device_to_host)
add_exe(6_error_handling)
add_exe(7_buffer_usm)
add_exe(8_event)

add_subdirectory(advanced_inferno)
add_subdirectory(bleeding_edge)
